--- a/android/stereo-video-udp/res/values/strings.xml
+++ b/android/stereo-video-udp/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">GStreamer tutorial 5</string>
+    <string name="app_name">Stereo Video Viewer with UDP</string>
     <string name="button_play">Play</string>
     <string name="button_stop">Stop</string>
     <string name="button_select">Select</string>
